--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,8 @@
 steps:
-  # Build the Docker image
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy', '--quiet']
-
-images:
+  - name: gcr.io/cloud-builders/gcloud
+    args:
+      - app
+      - deploy
+      - '--quiet'
+options:
   logging: CLOUD_LOGGING_ONLY
