--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,13 @@
 steps:
-  - name: gcr.io/cloud-builders/gcloud
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/node-app', '.']
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/node-app']
+  - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - app
       - deploy
+      - '--image-url=gcr.io/$PROJECT_ID/node-app'
       - '--quiet'
 options:
   logging: CLOUD_LOGGING_ONLY
