--- a/app.yaml
+++ b/app.yaml
@@ -12,6 +12,8 @@
 # limitations under the License.
 
 # [START gae_quickstart_yaml]
-runtime: nodejs24
+runtime_config:
+    operating_system: "ubuntu24"
+    runtime_version: "24"
 env: flex
 # [END gae_quickstart_yaml]
